--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,14 +1,15 @@
 .header {
     display: block;
-    padding: 5px;
+    padding: 5px 30px;
   
     grid-area: header;
-    background: #15ce69;
+    background: #29cce5;
+    border-radius: 0 0 50px 50px;
 }
 
 .logo {
     display: block;
-    max-width: 50px;
-    max-height: 50px;
+    max-width: 40px;
+    max-height: 40px;
     border-radius: 50%;
 }  
