--- a/src/components/dialogs/dialogItem/DialogItem.module.css
+++ b/src/components/dialogs/dialogItem/DialogItem.module.css
@@ -14,6 +14,10 @@
   transition: all 0.2s ease;
 }
 
+.dialogLink.active {
+  transform: translateX(-15px);
+}
+
 .dialogLink:hover {
   transform: translateX(-15px);
 }
