add paginate & recolor elements

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,7 +3,7 @@
     padding: 5px 30px;
   
     grid-area: header;
-    background: #29cce5;
+    background: #00acba;
     border-radius: 0 0 50px 50px;
 }
 
