--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,5 +1,7 @@
 .header {
-    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 5px 30px;
   
     grid-area: header;
@@ -13,3 +15,33 @@
     max-height: 40px;
     border-radius: 50%;
 }  
+
+.loginLink {
+    display: inline-block;
+    font-size: 24px;
+    font-weight: bold;
+    color: bisque;
+    position: relative;
+}
+.loginLink::after {
+    content: "";
+    width: 0;
+    height: 2px;
+    background: bisque;
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    transition: all .3s ease;
+}
+
+.loginLink:hover::after {
+    width: 100%;
+}
+
+.loginLink.active {
+    color: bisque;
+}
+
+.loginLink span {
+    color: bisque !important;
+}
